Updating test files and docker setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=LedgerSync
+
+spring.docker.compose.enabled=false
+spring.profiles.active=local
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=never
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
